# InstantTanukiMaker

./: .gitignore  README.md  pyproject.toml
InstantTanukiMaker/: config.py  extra.py  main.py
docs/: build.md  readme(本家v2.0.0).txt
